k8s/apps/mgmt/headlamp-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headlamp-basic-auth
  namespace: mgmt
spec:
  basicAuth:
    secret: headlamp-basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: mgmt
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`headlamp.${DOMAIN_NAME}`)
      kind: Rule
      middlewares:
        - name: force-https
          namespace: mgmt
        - name: authelia
          namespace: mgmt
        - name: headlamp-token-header
      services:
        - name: headlamp
          port: 80
